@@ -1,5 +1,10 @@
 2007-09-27  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file.[ch]:
+        Add nautilus_file_set_attributes
+
+2007-09-27  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-vfs-utils.[ch]:
 	Add gnome_vfs_result_to_error call
 	
